--- a/public/css/template-style.css
+++ b/public/css/template-style.css
@@ -3,7 +3,7 @@ body {
 }
 nav {
 	background: none repeat scroll 0 0 rgba(0, 0, 0, 0);
-	position: absolute;
+	position: fixed;
 	top: 0;
 	z-index: 500;
 }
