--- a/public/css/style.css
+++ b/public/css/style.css
@@ -100,7 +100,11 @@
   position: relative;
   max-width: 100%;
   width: 100%;
-  margin: 0 auto 100px;
+  margin: 0 auto 0px;
 }
-
+.hide-bullets {
+list-style:none;
+margin-left: -40px;
+margin-top:20px;
+}
 
