--- a/public/css/contact.css
+++ b/public/css/contact.css
@@ -11,10 +11,17 @@
 	margin-top: 5px;
 	background: #efefef;
 	margin-bottom: 10px;
+	color: black;
 }
 .contact-details3{
-	float: right;
-	margin-top: 5px;
+	padding: 20px;
 	background: #efefef;
 	margin-bottom: 10px;
+	font-size: 22px;
+
 }
+.fa{
+	margin: 0 !important;
+	padding: 0 !important; 
+}
+
