--- a/public/css/template-style.css
+++ b/public/css/template-style.css
@@ -104,7 +104,7 @@ footer p, footer a:link, footer a:visited, footer a:hover {
 	padding: 0.625em 0.8em;
 }
 #first-block i {
-	background: none repeat scroll 0 0 #2fcbe0;
+	background: none repeat scroll 0 0 #dd1313;
 	border-radius: 100px;
 	color: #fff;
 	display: block;
