--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,4 +1,7 @@
-
+     @font-face {
+      font-family: Rise;
+      src: url("../font/Rise of Kingdom.ttf");
+  }
 .panel-login {
   border-color: #ccc;
   -webkit-box-shadow: 0px 2px 3px 0px rgba(0,0,0,0.2);
